fix(cart item): fix text overflow - cart item title

--- a/ex4/src/scss/pages/_cart.scss
+++ b/ex4/src/scss/pages/_cart.scss
@@ -290,14 +290,14 @@
     line-height: 1.2;
     flex: 1 1 auto;
     min-width: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
     padding-top: 5px;
 
     &-link {
+      @include m.line-clamp(1);
       color: inherit;
       text-decoration: none;
+      overflow-wrap: break-word;
+      word-break: break-word;
 
       &:hover {
         text-decoration: underline;
